# rts_assignment

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  net.rs  shared.rs
src/ground_control/: commands.rs  core.rs  mod.rs  monitoring.rs  types.rs
src/satellite/: benchmarking.rs  core.rs  downlink.rs  health.rs  mod.rs  scheduling.rs  sensors.rs  types.rs
